--- a/src/html/index.html
+++ b/src/html/index.html
@@ -35,6 +35,35 @@
 
 		var ballRadius = 10;
 
+		var paddleHeight = 10;
+		var paddleWidth = 75;
+		var paddleX = (canvas.width-paddleWidth) / 2;
+
+		var rightPressed = false;
+		var leftPressed = false;
+
+		document.addEventListener("keydown", keyDownHandler, false);
+		document.addEventListener("keyup", keyUpHandler, false);
+
+		function keyDownHandler(e) {
+			if (e.keyCode == 39) {
+				rightPressed = true;
+			}
+
+			else if (e.keyCode == 37) {
+				leftPressed = true;
+			}
+		}
+
+		function keyUpHandler(e) {
+		    if(e.keyCode == 39) {
+		        rightPressed = false;
+		    }
+		    else if(e.keyCode == 37) {
+		        leftPressed = false;
+		    }
+		}
+
 		function drawBall() {
 			ctx.beginPath();
 			ctx.arc(x, y, ballRadius, 0, Math.PI * 2);
@@ -43,10 +72,18 @@
 			ctx.closePath();
 		}
 
+		function drawPaddle() {
+			ctx.beginPath();
+			ctx.rect(paddleX, canvas.height-(2*paddleHeight), paddleWidth, paddleHeight)
+			ctx.fill();
+			ctx.closePath();
+		}
+
 		function draw() {
 			//drawing code
 			ctx.clearRect(0, 0, canvas.width, canvas.height);
 			drawBall();
+			drawPaddle();
 			x += dx;
 			y += dy;
 
@@ -57,7 +94,17 @@
 			if (x + dx > canvas.width - ballRadius || x + dx < ballRadius) {
 				dx = -dx;
 			}
+
+			if (rightPressed && paddleX < canvas.width-paddleWidth) {
+				paddleX += 7
+			}
+
+			else if (leftPressed && paddleX > 0) {
+				paddleX -= 7;
+			}
+
 		}
+
 		setInterval(draw, 10);
 	</script>
 
