--- a/src/html/index.html
+++ b/src/html/index.html
@@ -87,8 +87,16 @@
 			x += dx;
 			y += dy;
 
-			if (y + dy > canvas.height - ballRadius || y + dy < ballRadius) {
+			if (y + dy < ballRadius) {
 				dy = -dy;
+			} else if (y + dy > canvas.height-ballRadius-(2*paddleHeight)) {
+				if (x > paddleX && x < paddleX + paddleWidth) {
+					dy = -dy;
+				}
+				else {
+					alert("GAME OVER");
+					document.location.reload();
+				}
 			}
 
 			if (x + dx > canvas.width - ballRadius || x + dx < ballRadius) {
