--- a/src/html/index.html
+++ b/src/html/index.html
@@ -42,6 +42,24 @@
 		var rightPressed = false;
 		var leftPressed = false;
 
+		var brickRowCount = 3;
+		var brickColumnCount = 5;
+		var brickWidth = 75;
+		var brickHeight = 20;
+		var brickPadding = 10;
+		var brickOffsetTop = 30;
+		var brickOffsetLeft = 30;
+
+		var bricks = [];
+		for (c = 0; c < brickColumnCount; c++) {
+			bricks[c] = [];
+			for (r = 0; r < brickRowCount; r++) {
+				bricks[c][r] = { x: 0, y: 0, status: 1 };
+			}
+		}
+
+		var score = 0;
+
 		document.addEventListener("keydown", keyDownHandler, false);
 		document.addEventListener("keyup", keyUpHandler, false);
 
@@ -64,6 +82,31 @@
 		    }
 		}
 
+		function collisionDetection() {
+			for (c = 0; c < brickColumnCount; c++) {
+				for (r = 0; r < brickRowCount; r++) {
+					var b = bricks[c][r];
+					if (b.status == 1) {
+						if(x > b.x && x < b.x+brickWidth && y > b.y && y < b.y+brickHeight) {
+			                dy = -dy;
+			                b.status = 0;
+			                score++;
+			                if (score == brickRowCount * brickColumnCount) {
+			                	alert("YOU WIN, CONGRATULATIONS!");
+			                	document.location.reload();
+			                }
+			            }
+			        }
+				}
+			}
+		}
+
+		function drawScore() {
+			ctx.font = "16px Arial";
+			ctx.fillStyle = "#0095DD";
+			ctx.fillText("Score: " + score, 8, 20);
+		}
+
 		function drawBall() {
 			ctx.beginPath();
 			ctx.arc(x, y, ballRadius, 0, Math.PI * 2);
@@ -79,17 +122,39 @@
 			ctx.closePath();
 		}
 
+		function drawBricks() {
+			for (c = 0; c < brickColumnCount; c++) {
+				for (r = 0; r < brickRowCount; r++) {
+					if (bricks[c][r].status == 1) {
+						var brickX = (c*(brickWidth + brickPadding)) + brickOffsetLeft;
+						var brickY = (r*(brickHeight+brickPadding)) + brickOffsetTop;
+						bricks[c][r].x = brickX;
+						bricks[c][r].y = brickY;
+						ctx.beginPath();
+						ctx.rect(brickX, brickY, brickWidth, brickHeight);
+						ctx.fillStyle = "#0095DD"
+						ctx.fill();
+						ctx.closePath();
+					}
+				}
+			}
+		}
+
 		function draw() {
 			//drawing code
 			ctx.clearRect(0, 0, canvas.width, canvas.height);
+			drawBricks();
 			drawBall();
 			drawPaddle();
+			drawScore();
+			collisionDetection();
 			x += dx;
 			y += dy;
 
 			if (y + dy < ballRadius) {
 				dy = -dy;
-			} else if (y + dy > canvas.height-ballRadius-(2*paddleHeight)) {
+			} 
+			else if (y > canvas.height-ballRadius-(2*paddleHeight)) {
 				if (x > paddleX && x < paddleX + paddleWidth) {
 					dy = -dy;
 				}
