--- a/src/html/index.html
+++ b/src/html/index.html
@@ -62,6 +62,7 @@
 
 		document.addEventListener("keydown", keyDownHandler, false);
 		document.addEventListener("keyup", keyUpHandler, false);
+		document.addEventListener("mousemove", mouseMoveHandler, false);
 
 		function keyDownHandler(e) {
 			if (e.keyCode == 39) {
@@ -177,10 +178,9 @@
 			}
 
 		}
-		document.addEventListener("mousemove", mouseMoveHandler, false);
 		function mouseMoveHandler(e) {
 			var relativeX = e.clientX - canvas.offSetLeft;
-			if (relativeX) > 0 && relativeX < canvas.width) {
+			if (relativeX > 0 && relativeX < canvas.width) {
 				paddleX = relativeX - paddleWidth / 2;
 			}
 		}
