--- a/src/html/index.html
+++ b/src/html/index.html
@@ -83,6 +83,13 @@
 		    }
 		}
 
+		function mouseMoveHandler(e) {
+			var relativeX = e.clientX - canvas.offsetLeft;
+			if (relativeX > 0 && relativeX < canvas.width) {
+				paddleX = relativeX - paddleWidth / 2;
+			}
+		}
+
 		function collisionDetection() {
 			for (c = 0; c < brickColumnCount; c++) {
 				for (r = 0; r < brickRowCount; r++) {
@@ -177,12 +184,6 @@
 				paddleX -= 7;
 			}
 
-		}
-		function mouseMoveHandler(e) {
-			var relativeX = e.clientX - canvas.offSetLeft;
-			if (relativeX > 0 && relativeX < canvas.width) {
-				paddleX = relativeX - paddleWidth / 2;
-			}
 		}
 		setInterval(draw, 10);
 	</script>
