--- a/src/html/index.html
+++ b/src/html/index.html
@@ -183,9 +183,9 @@
 			else if (leftPressed && paddleX > 0) {
 				paddleX -= 7;
 			}
-
+			requestAnimationFrame(draw);
 		}
-		setInterval(draw, 10);
+		draw();	
 	</script>
 
 </body>
